<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.gameMenuView.GameMenuFragment">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="false"
        android:scaleType="centerInside"
        android:src="@drawable/thicklines2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo" />

    <LinearLayout
        android:id="@+id/gameTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:foregroundGravity="fill"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImage">

        <TextView
            android:id="@+id/gameTextRock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="0"
            android:text="@string/gameTextRock"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#61707D" />

        <TextView
            android:id="@+id/gameTextPaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/gameTextPaper"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FCC556" />

        <TextView
            android:id="@+id/gameTextScissors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/gameTextScissors"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#CE1040" />

    </LinearLayout>

    <TextView
        android:id="@+id/gameMenuHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/gameMenu"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#34344A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTextLayout" />

    <Button
        android:id="@+id/newGameBtn"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nowa_gra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameMenuHeader" />

    <Button
        android:id="@+id/joinGameBtn"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/do_cz_do_gry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGameBtn" />

    <Button
        android:id="@+id/leaderboardBtn"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/leaderboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinGameBtn" />

    <Button
        android:id="@+id/logoutBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/logout"
        android:textColor="#34344A"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderboardBtn"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>