<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.leaderboardView.LeaderBoardFragment">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/logo"
            android:scaleType="centerInside"
            android:src="@drawable/thicklines2" />

        <LinearLayout
            android:id="@+id/headerTextLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/gameTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="fill"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/gameTextRock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="0"
                    android:text="@string/gameTextRock"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#61707D"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/gameTextPaper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/gameTextPaper"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#FCC556"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/gameTextScissors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/gameTextScissors"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#CE1040"
                    android:textSize="24sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/leaderboardHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/leaderboardHeading"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#34344A" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/leaderboardScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/backMenuBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/leaderboardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/leader_board_item_fragment" />
    </ScrollView>

    <Button
        android:id="@+id/backMenuBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/backMenu"
        android:textColor="#34344A"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>